--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ ipywidgets==8.0.6
 jupyterlab-dash==0.1.0a3
 seaborn==0.13.2
 python-dotenv==1.0.0
-psycopg2-binary==2.9.7
+psycopg[binary]
 SQLAlchemy==2.0.15
 missingno==0.5.2
 numpy==1.26.4
