--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas==2.2.2
 numpy==1.26.4
 scikit-learn==1.5.2
 joblib==1.5.3
-plotly==5.18.0
+plotly
 python-dotenv==1.0.0
 matplotlib==3.8.4
 seaborn==0.13.2
